<resources>
    <string name="app_name">TaskTimerApp</string>
    <string name="menumain_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menumain_addTask">Add Task</string>
    <string name="menumain_showDurations">Durations Report</string>
    <string name="menumain_showAbout">About</string>
    <string name="menumain_generateData">Generate Data</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="edit_button_description">Button to edit Task Details</string>
    <string name="delete_button_description">Button to Delete Task</string>
    <string name="addedit_name_hint">Task Name: Required</string>
    <string name="addedit_description_hint">Task Description (optional)</string>
    <string name="addedit_sortorder_hint">Task Sort Order (optional)</string>
    <string name="addedit_button_save">Save</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions_body">"Use the add (+) button in the Toolbar to create new Tasks.\n\nTasks with lower sort orders will be placed higher up on the list.\n\nTasks with same sort order will appear alphabetically.\n\nTapping a Task will start timer for that Task. And stop for any other on going Timers.\n\nEach Task has an Edit Button if you want to change the details of a Task.\n\nTo Delete a Task just swipe the Task Left."</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting will also delete all the Timings data associated with Task id %1$d : %2$s</string>
    <string name="cancelEditDiag_positive_caption">Abandon Changes</string>
    <string name="cancelEdit_negative_caption">Continue Editing</string>
    <string name="cancelEdit_message">You have unsaved changes. Do you want to abandon changes, or continue editing.</string>
    <string name="AppTitle">Task Timer App</string>
    <string name="about_copyright">Copyright \u00a9 2019 learnprogramming.academy</string>
    <string name="about_weblink">Instructions available at</string>
    <string name="about_email">For support, email tasktimer@learnprogramming.academy</string>
    <string name="about_credits">Icon derived from <b>pocket watch</b> at <b>openclipart.org</b> by <b>Anonymous</b></string>
    <string name="about_web_url_link">https://learnprogramming.academy/</string>
    <string name="about_web_url_full">Instructions available at www.learnprogramming.academy</string>
    <string name="about_url_error">No Browser application found, cannot visit the world-wide-web.</string>
    <string name="current_timing_message">Currently Timing %1$s</string>
    <string name="td_name_text">Task Name</string>
    <string name="td_start_text">Date</string>
    <string name="td_duration_text">Duration</string>
    <string name="td_description_text">Description</string>
    <string name="title_activity_durations_report">DurationsReport</string>
    <string name="rm_title_filter_day">Show Day</string>
    <string name="rm_title_filter_week">Show Week</string>
    <string name="rm_title_filter_date">Set Report Date</string>
    <string name="rm_title_delete">Delete old Timings</string>
    <string name="date_title_filter">Select Date for Report</string>
    <string name="date_title_delete">Select the Date to delete upto</string>
    <string name="delete_timings_message">Are you sure you want to delete all timings before %1$s</string>
    <string name="delete_editing_task">You can\'t delete the Task that is being Edited.</string>
</resources>